# BasicRustApi

vehicle-manager-axum/: Cargo.toml  api-test.ps1
vehicle-manager-axum/src/: main.rs  vehicle.rs
