[package]
name = "vehicle-manager-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version="0.8.8", features =["http2","macros","ws"]}
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.19.0", features = ["v4"] }
